Update title for December 14 entry
The Gotland Russ is rustic, hardy, frugal and energetic.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -2,7 +2,7 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 # December 2025 #
 
-### Sunday, December 14, 2025 ###
+### Sunday, December 14, 2025 ~ 'The Gotland Russ is rustic, hardy, frugal and energetic.' ###
 
 Deixes:
 
