Fix spelling and add Wikipedia link in December 2025 entry
Corrected the spelling of 'Deixes' to 'Deixᛂs' and added a Wikipedia link.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,9 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Sunday, December 14, 2025 ~ 'The Gotland Russ is rustic, hardy, frugal and energetic.' ###
 
-Deixes:
+Deixᛂs:
 
 * https://youtu.be/4e7qpRh2Fr4?si=z09dR_wioTuA-TxK
+* https://en.wikipedia.org/w/index.php?title=Gotland_Russ&oldid=1321299719
 
 [![YouTube thumbnail – 4e7qpRh2Fr4](https://i.ytimg.com/vi/4e7qpRh2Fr4/maxresdefault.jpg)](https://youtu.be/4e7qpRh2Fr4)
 
