Update December 2025 entry with additional resources
Added a link and a YouTube thumbnail to the December 2025 entry.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,6 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Important Annexure for Extended High Seat Actionability ###
 
+Deixis:
+
+* https://www.linkedin.com/posts/beauford-a-stenberg_gently-bless-melbourne-pseudo-vaishnavas-activity-7405933164189212672-yldg?utm_source=social_share_send&utm_medium=android_app&rcm=ACoAAAOetuEBS3aWE37oLbrQpvGwKNiCCse1mps&utm_campaign=copy_link
+
 [![YouTube thumbnail – 9hPnrigPGWc](https://i.ytimg.com/vi/9hPnrigPGWc/maxresdefault.jpg)](https://youtu.be/9hPnrigPGWc)
 
 ### Sunday, December 14, 2025 ~ 'The Gotland Russ is rustic, hardy, frugal and energetic.' ###
