Fix punctuation in lesson plan description
Removed a comma before 'and' in the lesson plan description.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -10,7 +10,7 @@ Deix|s:
 
 **Lesson Plan: Linguistic and Semiotic Analysis of the Nobel Prize 2025 Arrival Ceremony (Swedish)**
 
-This lesson is designed for an adept, self-taught linguist and semiologist aiming to analyze the Swedish language and semiotic elements in the Nobel Prize 2025 arrival ceremony audiovisual. The lesson triangulates **linguistic features**, **semiotic signs**, and **cultural context** to deepen understanding.
+This lesson is designed for an adept, self-taught linguist and semiologist aiming to analyze the Swedish language and semiotic elements in the Nobel Prize 2025 arrival ceremony audiovisual. The lesson triangulates **linguistic features**, **semiotic signs** and **cultural context** to deepen understanding.
 
 ---
 
