Update family recreational profile with links
Solliden Palace

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -159,7 +159,7 @@ Princess Madeleine is described as an enthusiastic equestrian, with a history of
 
 **Family‑level recreational profile**
 
-At the family level, the Swedish royals are often characterized as very sporty and outdoors‑oriented, with shared enjoyment of skiing in Storlien in winter and riding, water sports and gardening at Solliden Palace on Öland in summer. This shared pattern underpins and complements the more individualised hobbies and passions recorded for each senior member of the House of Bernadotte.[3][1]
+At the family level, the Swedish royals are often characterized as very sporty and outdoors‑oriented, with shared enjoyment of skiing in [Storlien](https://en.wikipedia.org/w/index.php?title=Storlien&oldid=1293227634) in winter and riding, water sports and gardening at Solliden Palace on [Öland](https://en.wikipedia.org/w/index.php?title=%C3%96land&oldid=1322550389) in summer. This shared pattern underpins and complements the more individualised hobbies and passions recorded for each senior member of the House of Bernadotte.[3][1]
 
 [1](https://sweden.se/life/people/the-swedish-royal-family)
 [2](https://www.kungahuset.se/english/royal-house/hrh-the-crown-princess)
