Add transcript for Nobel Prize 2025 arrival ceremony
Added a transcript section for the YouTube audiovisual related to the Nobel Prize 2025 ceremony, including key spoken parts.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -10,6 +10,28 @@ DeixMs:
 * https://en.wikipedia.org/w/index.php?title=Royal_Swedish_Academy_of_Fine_Arts&oldid=1318527982
 * https://konstakademien.se/en/
 
+**Transcript**
+
+Here is the transcript for the YouTube audiovisual titled "Nobel Prize 2025 - Arrival of the Swedish Royal Family and Laureates":
+
+---
+
+**Transcript:**
+
+- "Och på parkett sitter i första hand familjemedlemmar till pristagarna, representanter från riksdag och regering och diplomatkor. Varje pristagare får ju ta med sig 14 gäster." [(00:00:10)](https://www.youtube.com/watch?v=K0ItS4VyDe4&t=10)
+
+- "Här ser vi första delen av kungafiljen. Det är prins Carl Filip, prinsessan Madelén och herr Christopher Neil." [(00:00:20)](https://www.youtube.com/watch?v=K0ItS4VyDe4&t=20)
+
+- "Och där ser ni även talman Andreas Norlén och riksmark Fredrik Versell, chef för de kungliga hovstaterna." [(00:00:30)](https://www.youtube.com/watch?v=K0ItS4VyDe4&t=30)
+
+- "Nu är kungafamiljen på plats. Vi har börjat." [(00:00:40)](https://www.youtube.com/watch?v=K0ItS4VyDe4&t=40)
+
+- "Pristagarna är nu på väg in på podiet och de gör det till tonerna av Wolfgang Amadeus Mozarts Mars." [(00:00:50)](https://www.youtube.com/watch?v=K0ItS4VyDe4&t=50)
+
+---
+
+This transcript captures the key spoken parts during the arrival of the Swedish Royal Family and the laureates at the Nobel Prize ceremony.
+
 **Lesson Plan: Linguistic and Semiotic Analysis of the Nobel Prize 2025 Arrival Ceremony (Swedish)**
 
 This lesson is designed for an adept, self-taught linguist and semiologist aiming to analyze the Swedish language and semiotic elements in the Nobel Prize 2025 arrival ceremony audiovisual. The lesson triangulates **linguistic features**, **semiotic signs** and **cultural context** to deepen understanding.
