Update December 2025 weblog with new links
Added links to Superlative Deix and DeixMs for December 17, 2025.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,6 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Wednesday, December 17, 2025 ###
 
+Superlative Deix|s:
+
+* https://github.com/b9Joker108/hummingbird_homestead_-_ganachakra_kitchen/blob/main/weblog/2025/december_2025_v1_06122025.md#wednesday-december-17-2025
+
 DeixMs:
 
 * https://youtu.be/K0ItS4VyDe4?si=0fLIDzJF1kP8IR1M
